<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_ingredients" tools:context=".AddIngredients">


    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:id="@+id/myFrame"
        android:layout_alignParentStart="true"
        android:clickable="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/NoIngredientsSelected"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:id="@+id/listView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/spinner"
            android:layout_above="@+id/addButton" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_To_Cart"
            android:id="@+id/addButton"
            android:layout_gravity="start|bottom"

            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/removeButton"
            android:layout_toStartOf="@+id/removeButton"
            android:layout_marginRight="42dp"
            android:layout_marginEnd="42dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/removeLastItem"
            android:id="@+id/removeButton"
            android:layout_gravity="end|bottom"

            android:visibility="visible"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>
