<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_ingredients" tools:context=".AddIngredients">

    <TextView android:text="@string/Select_Your_Ingredients" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:id="@+id/myFrame"
        android:layout_alignTop="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentStart="true"
        android:clickable="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button"
            android:layout_marginTop="64dp" />

        <ScrollView
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:id="@+id/scrollView"
            android:scrollbars = "vertical"
            android:fadeScrollbars="false"
            android:background="#d8d3d3"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:scrollbars = "vertical"
                android:fadeScrollbars="false"
                android:background="#d8d3d3" />
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_above="@+id/button4"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_To_Cart"
            android:id="@+id/button"
            android:layout_gravity="start|bottom"

            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/button2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remove last item"
            android:id="@+id/button4"
            android:layout_gravity="end|bottom"

            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>
